Add Eclipse Papyrus test statemachine

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ hs_err_pid*
 # Binaries
 /net.ziegelmeier.statemachine.uml.gen.cpp/bin
 /net.ziegelmeier.statemachine.uml.gen.cpp.ui/bin
+/net.ziegelmeier.statemachine.uml.gen.cpp/generated
