Test new generated code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include(ExternalProject)
 include(GNUInstallDirs REQUIRED)
 
 add_executable(${CMAKE_PROJECT_NAME}
-    "Statemachine Test/src-gen/IoArHandler.cxx"
+    "test/IoArHandler.cxx"
     "test/main.cxx"
 )
 
