--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.ziegelmeier</groupId>
-  <artifactId>net.ziegelmeier.StatemachineGenerator</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <description>Dirk Ziegelmeiers Statemachine Generator
-</description>
+  <artifactId>net.ziegelmeier.statemachinegenerator</artifactId>
+  <version>1.0.0</version>
+  <description>Dirk Ziegelmeiers Statemachine Generator</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
@@ -26,11 +25,6 @@
     </plugins>
   </build>
   <dependencies>
-  	<dependency>
-  		<groupId>org.eclipse.epsilon</groupId>
-  		<artifactId>org.eclipse.epsilon.common</artifactId>
-  		<version>2.4.0</version>
-  	</dependency>
   	<dependency>
   		<groupId>org.eclipse.epsilon</groupId>
   		<artifactId>org.eclipse.epsilon.egl.engine</artifactId>
