--- a/test/xmi/.project
+++ b/test/xmi/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StatemachineTest XMI</name>
+	<name>XmiStatemachineTest</name>
 	<comment></comment>
 	<projects>
 	</projects>
